--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -14,6 +14,7 @@
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-image-gallery": "^1.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^1.1.5",
     "react-spinners": "^0.11.0",
