--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "serve": "pm2 index.js",
+    "dev": "nodemon index.js"
   },
   "author": "Nidhal Nouma",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.936.0",
+    "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "ejs": "^3.1.6",
+    "express": "^4.17.1",
+    "mongoose": "^5.13.0"
   }
 }
